# getable

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
getable/: __init__.py  parser.py
tableparser/: models.py  parser.py  utils.py
tests/: test_parser.py  test_utils.py
tests/resources/: table.html
