[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tableparser"
authors = [
    {name = "Zhao Blake", email = "zhao_decheng@qq.com"},
]
description = "A tool to parse HTML table"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = ["pyquery"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "tableparser.__version__"}

