[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getable"
authors = [
    { name = "Zhao Blake", email = "zhao_decheng@qq.com" },
]
description = "A simple tool to parse HTML table to a 2d-array-like data structure"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = ["pyquery"]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/zhaoblake/tableparser"

[tool.hatch.version]
path = "tableparser/__init__.py"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
